--- a/app/sass/platform/_dropdowns.scss
+++ b/app/sass/platform/_dropdowns.scss
@@ -85,7 +85,7 @@ Copyright 2016 Fresco News, Inc. All Rights Reserved.
 
 		.list{
 			max-height:250px;
-			overflow:scroll;
+			overflow:auto;
 			list-style:none;
 			margin:0;
 			padding:0;
